login-logout-register frontend

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
                     </div>
 
-                    <div class="navbar-nav d-none" id="loggedMenu">
+                    <div class="navbar-nav" id="loggedMenu">
                         <a class="nav-link">Időjárásadatok kezelése</a>
                         <a class="nav-link">Statisztika</a>
                         <a class="nav-link">Naptár</a>
-                        <a class="nav-link">Profil</a>
-                        <a class="nav-link">Kijelentkezés</a>
+                        <a class="nav-link" onclick="RenderPage('profile')">Profil</a>
+                        <a class="nav-link" onclick="LogOut()">Kijelentkezés</a>
                     </div>
 
                 </div>
