profile modification frontend

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     </div>
 
                     <div class="navbar-nav" id="loggedMenu">
-                        <a class="nav-link">Időjárásadatok kezelése</a>
-                        <a class="nav-link">Statisztika</a>
-                        <a class="nav-link">Naptár</a>
-                        <a class="nav-link" onclick="RenderPage('profile')">Profil</a>
-                        <a class="nav-link" onclick="LogOut()">Kijelentkezés</a>
+                        <a class="nav-link" href="#">Időjárásadatok kezelése</a>
+                        <a class="nav-link" href="#">Statisztika</a>
+                        <a class="nav-link" href="#">Naptár</a>
+                        <a class="nav-link" href="#" onclick="RenderPage('profile')">Profil</a>
+                        <a class="nav-link" href="#" onclick="LogOut()">Kijelentkezés</a>
                     </div>
 
                 </div>
