main.html format

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="navbar-nav" id="loggedMenu">
-                        <a class="nav-link" href="#">Időjárásadatok kezelése</a>
+                        <a class="nav-link" href="#" onclick="RenderPage('main')">Időjárásadatok kezelése</a>
                         <a class="nav-link" href="#">Statisztika</a>
                         <a class="nav-link" href="#">Naptár</a>
                         <a class="nav-link" href="#" onclick="RenderPage('profile')">Profil</a>
@@ -78,6 +78,7 @@
 
     <script src="controllers/toastCtrl.js"></script>
     <script src="controllers/userCtrl.js"></script>
+    <script src="controllers/weatherCtrl.js"></script>
 </body>
 
 </html>
