--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="navbar-nav" id="loggedMenu">
                         <a class="nav-link" href="#" onclick="RenderPage('main')">Időjárásadatok kezelése</a>
                         <a class="nav-link" href="#">Statisztika</a>
-                        <a class="nav-link" href="#">Naptár</a>
+                        <a class="nav-link" href="#" onclick="RenderPage('calendar')">Naptár</a>
                         <a class="nav-link" href="#" onclick="RenderPage('profile')">Profil</a>
                         <a class="nav-link" href="#" onclick="LogOut()">Kijelentkezés</a>
                     </div>
@@ -75,10 +75,13 @@
 
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js'></script>
+
 
     <script src="controllers/toastCtrl.js"></script>
     <script src="controllers/userCtrl.js"></script>
     <script src="controllers/weatherCtrl.js"></script>
+    <script src="controllers/calendarCtrl.js"></script>
 </body>
 
 </html>
