--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                     <div class="navbar-nav" id="loggedMenu">
                         <a class="nav-link" href="#" onclick="RenderPage('main')">Időjárásadatok kezelése</a>
-                        <a class="nav-link" href="#">Statisztika</a>
+                        <a class="nav-link" href="#" onclick="RenderPage('chart')">Statisztika</a>
                         <a class="nav-link" href="#" onclick="RenderPage('calendar')">Naptár</a>
                         <a class="nav-link" href="#" onclick="RenderPage('profile')">Profil</a>
                         <a class="nav-link" href="#" onclick="LogOut()">Kijelentkezés</a>
@@ -53,7 +53,7 @@
         <main>
         </main>
         <!--<div class="ToastHolder"></div>-->
-        
+
 
         <footer>
             <p>Bajai SZC Türr István Technikum</p>
@@ -74,14 +74,17 @@
     <!--Assets & Controllers-->
 
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/app.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js'></script>
+    <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+    <script src="https://cdn.canvasjs.com/jquery.canvasjs.min.js"></script>
+    <script src="assets/js/app.js"></script>
 
 
     <script src="controllers/toastCtrl.js"></script>
     <script src="controllers/userCtrl.js"></script>
     <script src="controllers/weatherCtrl.js"></script>
     <script src="controllers/calendarCtrl.js"></script>
+    <script src="controllers/chartCtrl.js"></script>
 </body>
 
 </html>
