--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js'></script>
     <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
     <script src="https://cdn.canvasjs.com/jquery.canvasjs.min.js"></script>
-    <script src="assets/js/app.js"></script>
+    
 
 
     <script src="controllers/toastCtrl.js"></script>
@@ -85,6 +85,9 @@
     <script src="controllers/weatherCtrl.js"></script>
     <script src="controllers/calendarCtrl.js"></script>
     <script src="controllers/chartCtrl.js"></script>
+
+    <!--loading issue test-->
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
